--- a/Content.Client/Power/Battery/BatteryMenu.xaml
+++ b/Content.Client/Power/Battery/BatteryMenu.xaml
@@ -1,9 +1,9 @@
-﻿<controls:FancyWindow xmlns="https://spacestation14.io"
+<controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
-                      SetSize="650 330"
-                      Resizable="False">
+                      SetSize="775 340" 
+                      Resizable="False"><!-- Lua set size 775/340, default 650/330 -->
     <BoxContainer Orientation="Vertical">
         <!-- Top row: main content -->
         <BoxContainer Name="MainContent" Orientation="Horizontal" VerticalExpand="True" Margin="4">
